[package]
name = "iv2c"
authors = ["Nicolas Frey <contact@nicolas-frey.com>"]
version = "0.1.0"
edition = "2024"
readme = "../README.md"
license-file = "../LICENSE"
keywords = ["ASCII", "image", "video", "text", "ASCII-art"]
publish = ["iv2c"]

[dependencies]
image = "0.25"
opencv = { version = "0.94.2", default-features = false, features = [
    "videoio",
    "imgproc",
    "clang-runtime",
] }
gif = "0.13.1"
gif-dispose = "5.0.0"
libwebp-sys = "0.12.1"
ffmpeg-next = "7.1.0"
thiserror = "2.0"
fast_image_resize = "5.0.0"
serde_json = "1.0.140"
num = "0.4"
imageproc = { version = "0.25.0", optional = true }
ab_glyph = { version = "0.2.29", optional = true }
rayon = { version = "1.10.0", optional = true }

[features]
default = ["render"]
render = ["dep:imageproc", "dep:ab_glyph", "dep:rayon"]
